ktlint, detekt 추가
- kotlin version : 1.9.25 -> 2.0.10
- spring boot version : 3.4.3 -> 3.4.5